# TaskITEasy

./: .gitignore  DECISIONS.md  README.md  app.yml  pyproject.toml
api/: api.py  db.py
test/: api.test.py  test.py
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
ui/app/: root.jsx  tailwind.css
ui/app/.client/: editor.client.jsx  inner.html  usePureCallback.js
ui/src/: App.css  App.jsx  Editor.jsx  Tasks.jsx  utils.js  utils.test.js
ui/src/.client/: editor.client.jsx
